--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,26 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.30.0",
+    "nanoid": "^5.0.2",
+    "notiflix": "^3.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.1.3",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-jest": "^26.6.3",
+    "esm": "^3.2.25",
+    "jest": "26.6.0",
+    "prettier": "^3.0.3"
   }
 }
