--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.30.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "nanoid": "^5.0.2",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
@@ -54,6 +56,7 @@
     "@babel/preset-react": "^7.22.15",
     "babel-jest": "^26.6.3",
     "esm": "^3.2.25",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "26.6.0",
     "prettier": "^3.0.3"
   }
