--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.30.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
+    "framer-motion": "^10.16.4",
     "nanoid": "^5.0.2",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
